[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.65",
]
